[gd_scene load_steps=4 format=3 uid="uid://qfxnmtqow5o0"]

[ext_resource type="Texture2D" uid="uid://ck4fgxrui0dmj" path="res://ui/icons/empty_slot_frame-512.png" id="1"]
[ext_resource type="Theme" uid="uid://scmq74q2qxlx" path="res://themes/ui_theme.tres" id="2"]
[ext_resource type="Script" path="res://ui/panels/spells/spells_panel.gd" id="3"]

[node name="spells_panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("3")

[node name="layout" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="buttons" type="HBoxContainer" parent="layout"]
layout_mode = 2

[node name="all" type="Button" parent="layout/buttons"]
layout_mode = 2
size_flags_horizontal = 6
text = "All"
expand_icon = true

[node name="life" type="Button" parent="layout/buttons"]
layout_mode = 2
size_flags_horizontal = 6
text = "Life"
expand_icon = true

[node name="fire" type="Button" parent="layout/buttons"]
layout_mode = 2
size_flags_horizontal = 6
text = "Fire"
expand_icon = true

[node name="ice" type="Button" parent="layout/buttons"]
layout_mode = 2
size_flags_horizontal = 6
text = "Ice"
expand_icon = true

[node name="darkness" type="Button" parent="layout/buttons"]
layout_mode = 2
size_flags_horizontal = 6
text = "Darkness"
expand_icon = true

[node name="blood" type="Button" parent="layout/buttons"]
layout_mode = 2
size_flags_horizontal = 6
text = "Blood"
expand_icon = true

[node name="list" type="ItemList" parent="layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="detail_popup" type="Popup" parent="layout/list"]

[node name="icon" type="TextureRect" parent="layout/list/detail_popup"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.3
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 6

[node name="label" type="Label" parent="layout/list/detail_popup"]
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.8

[node name="slots" type="HBoxContainer" parent="layout/list/detail_popup"]
anchors_preset = -1
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0

[node name="slot0" type="TextureButton" parent="layout/list/detail_popup/slots"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("1")
stretch_mode = 5

[node name="slot1" type="TextureButton" parent="layout/list/detail_popup/slots"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("1")
stretch_mode = 5

[node name="slot2" type="TextureButton" parent="layout/list/detail_popup/slots"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("1")
stretch_mode = 5

[node name="slot3" type="TextureButton" parent="layout/list/detail_popup/slots"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("1")
stretch_mode = 5

[node name="slot4" type="TextureButton" parent="layout/list/detail_popup/slots"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("1")
stretch_mode = 5

[connection signal="visibility_changed" from="." to="." method="_on_spells_panel_visibility_changed"]
[connection signal="pressed" from="layout/buttons/all" to="." method="_on_all_pressed"]
[connection signal="pressed" from="layout/buttons/life" to="." method="_on_life_pressed"]
[connection signal="pressed" from="layout/buttons/fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="layout/buttons/ice" to="." method="_on_ice_pressed"]
[connection signal="pressed" from="layout/buttons/darkness" to="." method="_on_darkness_pressed"]
[connection signal="pressed" from="layout/buttons/blood" to="." method="_on_blood_pressed"]
[connection signal="item_activated" from="layout/list" to="." method="_on_list_item_activated"]
[connection signal="pressed" from="layout/list/detail_popup/slots/slot0" to="." method="_on_slot_pressed" binds= [0]]
[connection signal="pressed" from="layout/list/detail_popup/slots/slot1" to="." method="_on_slot_pressed" binds= [1]]
[connection signal="pressed" from="layout/list/detail_popup/slots/slot2" to="." method="_on_slot_pressed" binds= [2]]
[connection signal="pressed" from="layout/list/detail_popup/slots/slot3" to="." method="_on_slot_pressed" binds= [3]]
[connection signal="pressed" from="layout/list/detail_popup/slots/slot4" to="." method="_on_slot_pressed" binds= [4]]
